# ROS-TurtleBot-2DAreaScanning

./: README.md  Turtlebot instructions.txt  how to turn the robot system on
catkin_ws/devel/include/line_tracing/: cmd_stamped.h  hsv_thresh.h  theta_stamped.h
catkin_ws/devel/include/localize/: slam_stamped.h  theta_stamped.h
catkin_ws/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
catkin_ws/devel/lib/line_tracing/: area_detecting_node  line_tracing_node
catkin_ws/devel/lib/localize/: localize_node  localize_tf
catkin_ws/devel/lib/pkgconfig/: gmapping.pc  line_tracing.pc  localize.pc  ydlidar.pc
catkin_ws/devel/lib/python2.7/dist-packages/line_tracing/msg/: __init__.py  _cmd_stamped.py  _hsv_thresh.py  _theta_stamped.py
catkin_ws/devel/lib/python2.7/dist-packages/localize/msg/: __init__.py  _slam_stamped.py  _theta_stamped.py
catkin_ws/devel/lib/ydlidar/: ydlidar_node
catkin_ws/devel/share/gmapping/cmake/: gmappingConfig.cmake
catkin_ws/devel/share/line_tracing/cmake/: line_tracing-msg-extras.cmake  line_tracing-msg-paths.cmake  line_tracingConfig.cmake
catkin_ws/devel/share/localize/cmake/: localize-msg-extras.cmake  localize-msg-paths.cmake  localizeConfig.cmake
catkin_ws/devel/share/roseus/ros/line_tracing/: manifest.l
catkin_ws/devel/share/roseus/ros/localize/: manifest.l
catkin_ws/devel/share/ydlidar/cmake/: ydlidarConfig.cmake
catkin_ws/src/line_tracing/: CMakeLists.txt  package.xml
catkin_ws/src/line_tracing/msg/: cmd_stamped.msg  theta_stamped.msg
catkin_ws/src/line_tracing/src/: .area_detecting_node.cpp.swp  area_detecting_node.cpp  line_tracing_node.cpp
catkin_ws/src/localize/: CMakeLists.txt  complete_coverage.rviz  package.xml
catkin_ws/src/localize/msg/: slam_stamped.msg  theta_stamped.msg
catkin_ws/src/localize/src/: localize_node.cpp  localize_node_line.cpp  localize_node_odom.cpp  localize_node_slam.cpp  tf_node.cpp
(+26 files in other folders)
